--- a/hcss.html
+++ b/hcss.html
@@ -147,15 +147,15 @@ The source file (src), alternative text (alt), width, and height are provided as
         </section>
         
         <section class="main-section" id="Reference">
-          <header>Reference</header>
+          <header>IDE</header>
           <article>
             <ul>
               <li>
-                All the documentation in this page is taken from
+                Link to practice using compiler
                 <a
-                  href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Guide"
+                  href="https://supzi-del.github.io/sample/editor.html"
                   target="_blank"
-                  >MDN</a
+                  >IDE</a
                 >
               </li>
             </ul>
