--- a/editor.html
+++ b/editor.html
@@ -6,7 +6,7 @@
 <title>Code Editor YouTube</title>
 <meta name="description" content="Online JavaScript Compiler">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/lins/font-awesome/4.7.0/css/font-awesome.min.css">
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="styless.css">
 </head>
 <body>
 <div class="editor-menu">
